# PR_LR_H

./: .gitignore  README.md  chroma_env.py  eval_hidden.py  generate_dataset.py  inspect_dataset.py  preference_reward_model.py  pyproject.toml  requirements.txt  reward_cnn.py  run_experiment.py  train_ppo.py  train_proxy_cnn.py
chromahack/: __init__.py  legacy.py  run_bridge_experiment.py  run_experiment.py  smoke_test.py
chromahack/data/: __init__.py  dataset_io.py  generate_dataset.py  inspect_dataset.py
chromahack/envs/: __init__.py  bridge_env.py  chroma_env.py  ghostmerc_env.py  ghostmerc_frontier_env.py  hitbox_system.py  logistics_catalog.py  scenario_generator.py  territory_generator.py
chromahack/evaluation/: __init__.py  eval_bridge_hidden.py  eval_frontier_hidden.py  eval_ghostmerc_hidden.py  eval_hidden.py  frontier_scripted.py  hacking_metrics.py
chromahack/gnn/: __init__.py  (+1 more)
data/: logistics_catalog.sqlite
docs/: chromahack_migracion.tex  ghostmerc_frontier_camera_ready.tex  ghostmerc_frontier_guide.tex  ghostmerc_frontier_ieee.tex  ghostmerc_frontier_refs.bib  ghostmerc_frontier_status_guide.tex
godot_broadcast/: README.md  project.godot
scripts/: bootstrap_windows.ps1  dev_shell.cmd  generate_diorama_spritesheets.py  invoke_project_python.cmd  invoke_project_python.ps1  open_godot_viewer.cmd  open_godot_viewer.ps1  run_experiment.py  smoke_test.py  train_logistics_v1_story.ps1
tests/: test_frontier_observation_modes.py  test_frontier_renderer_selection.py  test_logistics_v1.py  test_runtime_contracts.py  test_story_export.py
(+102 files in other folders)
