[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromahack"
version = "0.1.0"
description = "Reward hacking experiments with a fragile visual proxy."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["chromahack*"]
