[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromahack"
version = "0.5.0"
description = "GhostMerc Frontier Territory: a reproducible RL research testbed for reward hacking, goal misgeneralization, and preference alignment."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["chromahack*"]
