[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chromahack"
version = "0.5.0"
description = "GhostMerc Frontier Territory: a reproducible RL research testbed for reward hacking, goal misgeneralization, and preference alignment."
requires-python = ">=3.10"
dependencies = [
  "gymnasium>=0.29.0",
  "stable-baselines3>=2.3.0",
  "torch>=2.1.0",
  "numpy>=1.24.0",
  "pygame>=2.5.0; python_version < '3.14'",
  "pygame-ce>=2.5.7; python_version >= '3.14'",
  "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
python_files = [
  "tests/test_*.py",
]

[tool.setuptools.packages.find]
include = ["chromahack*"]
